[gd_scene load_steps=10 format=3 uid="uid://b6ggjxwu3ebra"]

[ext_resource type="Script" path="res://Scenes/gui.gd" id="1_5w5l0"]
[ext_resource type="Texture2D" uid="uid://fy7pylwwkxnc" path="res://Images/Ruby-B.png" id="2_5g2nc"]
[ext_resource type="Texture2D" uid="uid://hooc4wns0vjh" path="res://Images/Pearl-B.png" id="3_enbeq"]
[ext_resource type="Texture2D" uid="uid://cb0td7tg0bnon" path="res://Images/Amber-B.png" id="4_7o3wd"]
[ext_resource type="Texture2D" uid="uid://bkcgq4lh8rub3" path="res://Images/Jade-B.png" id="5_b6hnr"]
[ext_resource type="Texture2D" uid="uid://cbi1vqsdmrbvl" path="res://Images/Amalgam-B.png" id="6_o0tqt"]
[ext_resource type="Texture2D" uid="uid://c6ablo4fme5fu" path="res://Images/Board_Only.png" id="7_k5qdy"]
[ext_resource type="Texture2D" uid="uid://nmf58ej1t3oq" path="res://Images/Portal-B.png" id="7_kjaam"]
[ext_resource type="Texture2D" uid="uid://2car6ilnoxkq" path="res://Images/Void-B.png" id="8_qu8ve"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5w5l0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 1040.0
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 1155.0
offset_top = 44.0
offset_right = 5199.0
offset_bottom = 2064.0
scale = Vector2(0.05, 0.05)

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="Ruby" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("2_5g2nc")
flat = true
icon_alignment = 1

[node name="Pearl" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("3_enbeq")
flat = true
icon_alignment = 1

[node name="Amber" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("4_7o3wd")
flat = true
icon_alignment = 1

[node name="Jade" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("5_b6hnr")
flat = true
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Background/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Amalgam" type="Button" parent="Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("6_o0tqt")
flat = true
icon_alignment = 1

[node name="Portal" type="Button" parent="Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("7_kjaam")
flat = true
icon_alignment = 1

[node name="Void" type="Button" parent="Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Jade"
toggle_mode = true
icon = ExtResource("8_qu8ve")
flat = true
icon_alignment = 1

[node name="Spacer2" type="Control" parent="Background/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="RemovePiece" type="Button" parent="Background"]
layout_mode = 2
offset_left = 1199.0
offset_top = 158.0
offset_right = 1315.0
offset_bottom = 189.0
text = "Remove Piece"

[node name="Setup" type="Button" parent="Background"]
layout_mode = 2
offset_left = 1204.0
offset_top = 939.0
offset_right = 1320.0
offset_bottom = 970.0
text = "Setup Board"

[node name="Board" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1040.0
offset_bottom = 1040.0
color = Color(0.517184, 0.517184, 0.517184, 1)

[node name="BoardBackground" type="TextureRect" parent="Board"]
custom_minimum_size = Vector2(1040, 1040)
layout_mode = 1
offset_right = 1000.0
offset_bottom = 1000.0
texture = ExtResource("7_k5qdy")
expand_mode = 1

[node name="BoardGrid" type="GridContainer" parent="Board"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 1020.0
offset_bottom = 1020.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 25

[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/Ruby" to="." method="_on_ruby_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/Pearl" to="." method="_on_pearl_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/Amber" to="." method="_on_amber_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/Jade" to="." method="_on_jade_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer2/Amalgam" to="." method="_on_amalgam_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer2/Portal" to="." method="_on_portal_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer2/Void" to="." method="_on_void_pressed"]
[connection signal="pressed" from="Background/RemovePiece" to="." method="_on_remove_piece_pressed"]
[connection signal="pressed" from="Background/Setup" to="." method="_on_setup_pressed"]
